--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,42 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+h1 {
+  color: orange
+}
+
+input {
+  min-width: 300px;
+}
+
+.card {
+  max-width: 300px;
+  padding: 10px;
+  background-color: antiquewhite;
+  border-radius: 5px;
+}
+
+.card img {
+  max-width: 250px;
+  max-height: 250px;
+}
+
+.card h4 {
+  display: flex;
+  justify-content: center;
+}
+
+.mealsList {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 200px;
+  align-items: baseline;
+}
